src/App.css
* {
  margin: 0;
  padding: 0;
}

/* notebook */

.NewNoteBook {
  margin-top: 5%;
  margin-left: 40%;
}

/* parent div is notebook-bar */
.notebook-bar {
  /* position: fixed; */
  margin-bottom: 20%;
  overflow-y: scroll;
}

/* notescontainer */
.note-container {
  min-height: 150vh;
  min-width: 200vh;
  margin-top: 0;
  top: 0%;
  background-size: cover;
  overflow: auto;
  background-repeat: no-repeat;
  box-sizing: border-box;

  background-image: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),
    url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
  /* background-image: url("https://images.unsplash.com/photo-1471107340929-a87cd0f5b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=966&q=80"); */
}
#notebook-title {
  /* margin-top: 0;
  width: 100%;
  margin-left: 5%;
  font-size: 35px;
  font-weight: bold;
  text-align: center;
  height: 10%; */
  font-family: Poppins-Regular, sans-serif;
  font-size: 80px;
  font-weight: bold;
  line-height: 130px;
  color: #fff;
  text-transform: uppercase;
  text-align: center;
  width: 260px;
  margin: 25px auto 0;
  z-index: 19;
  text-shadow: 0px 0px 0 #6995bc, -1px 1px 0 #638fb5, -2px 2px 0 #5d88ad,
    -3px 3px 0 #5a84a8, -4px 4px 0 #5982a5, -5px 5px 0 #567ea0,
    -6px 6px 0 #517696, -7px 7px 0 #4d708e, -8px 8px 0 #486b87,
    -9px 9px 0 #4e6e89, -10px 10px 0 #45637c, -11px 11px 0 #415e77,
    -12px 12px 0 #3f5a72, -13px 13px 0 #375066, -14px 14px 0 #2f4559,
    -15px 15px 0 #273b4c;
}
.note-layout {
  align-items: baseline;
  margin-left: 20%;
  min-width: 100vh;
  position: absolute;
  width: 80vh;
  height: 100%;
}

.notes {
  overflow-y: scroll;
  overflow-x: hidden;
  float: left;
  height: 80%;
  width: 50%;
  margin-right: 10%;
  position: relative;
}
.NewNote {
  float: right;
  width: 40%;
  position: relative;
}
.newNoteForm {
  top: 0%;
  float: right;
}

/* userpage */

.newnb-div {
  margin-top: 5%;
  position: absolute;
  top: 100%;
}
#newnb-title {
  background: #b7d4e0;
  width: 14em;
  font-size: 18px;
  height: 2em;
  border: none;
  margin-left: 30%;
}
#newnb-title:hover {
  box-shadow: 0 0 4px 3px #a3c2ce;
}
.createNB {
  /* width: 10em; */
  margin-left: 0%;
  font-size: 45px;
  text-shadow: 0 5px 4px white;
  font-weight: bold;
}
.newnb-div {
  margin-top: 0;
  margin-left: 47%;
}
.newNbform {
  display: inline-block;
  align-items: center;
  width: 40em;
  height: 20em;
}

.submitNotebook {
  width: 17em;
  margin-top: 1%;
  margin-left: 30%;
  font-size: 15px;
  background: black;
  font-weight: bold;
  color: white;
  border-radius: 7px;
  height: 3em;
}
.submitNotebook:hover {
  box-shadow: 0 0 3px 3px white;
}
.your-notebooks {
  width: 10em;
  font-weight: bold;
  font-size: 70px;
  color: black;
  text-shadow: 1px 2px 2px white;
  position: absolute;
  z-index: 15;
  margin-left: 48%;
  top: 20%;
  margin-bottom: 30%;
}
.notebooks-list {
  position: absolute;
  z-index: 15;
  top: 30%;
  /* left: 48%; */
  bottom: 10%;
  margin-left: 48%;
  /* margin: -100px 0 0 -150px; */
  background: #b6d4e1;
  box-shadow: 0 0 4px 4px white;
  border-radius: 250px;
  overflow: auto;
  width: 34em;
  height: 35em;
  align-items: center;
  text-align: center;
  text-decoration: none;
}
.title-bar {
  min-width: 20%;
  left: 40%;
  right: 40%;
  color: white;
  text-decoration: none;
  margin-top: 1em;
  top: 20%;
  align-items: center;
  min-height: 40%; /* position: absolute; */
}
a {
  text-decoration: none;
}
.title-bar:hover {
  color: #27b7cf;
  font-weight: bold;
  font-size: 16px;
}
.logout-div {
  width: 100vw;
  border-bottom-style: solid;
  height: 2.3em;
  background-color: #5f89b0;
}
.logOut {
  float: left;
  height: 3em;
  width: 14em;
  border-radius: 3px;
  font-family: Poppins-Regular, sans-serif;
  font-weight: bold;
  font-size: 13px;
  color: #e2e2e2;
  background: black;
  align: right;
  border: none;
  right: 0;
}
.logOut:hover {
  color: white;
  background: #141b21;
}
.userPage-div {
  min-height: 150%;
  width: 100vw;
  margin-top: 0;
  top: 0%;
  background-size: cover;
  background-image: url("https://images.unsplash.com/photo-1527168027773-0cc890c4f42e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
  background-repeat: no-repeat;
}

/* note */
.individual-note {
  margin-top: 14%;
  width: 95%;
  min-height: 350px;
  margin-bottom: 5%;
  margin-left: 5%;

  /* background: red;
  border-style: outset;
  border-radius: 9px; */
}

.button {
  position: center;
  border-radius: 4px;
  margin: 1%;
}
.delete-note {
  border-radius: 4px;
  height: 5vh;
  width: 12vh;
  margin-top: 1%;
  font-weight: bold;
  /* font-weight: bold; */
  font-size: 13px;
  color: white;
  background-color: black;
  border: none;
}
.delete-note:hover {
  box-shadow: 0 0 3px 3px white;
}
.edit-button {
  height: 5vh;
  margin-top: 1%;
  width: 15vh;
  border-radius: 4px;
  font-weight: bold;
  color: white;
  font-size: 12px;
  background-color: black;
  border: none;
  width: 30%;
  margin: 2%;
}
.edit-button:hover {
  box-shadow: 0 0 3px 3px white;
}
/* translate */
.select-translate {
  width: 30%;
}

.translate-button {
  border-radius: 4px;
  height: 5vh;
  margin-left: 1%;
  width: 17vh;
  font-weight: bold;
  font-size: 13px;
  color: white;
  background-color: black;
  border: none;
}
.translate-button:hover {
  box-shadow: 0 0 3px 3px white;
}
.notetitle-div {
  /* border-style: solid; */
  text-align: center;
  background: #b6d4e1;
  box-shadow: 0 0 4px 4px white;
  width: 99%;
  height: 40px;
  border-width: 1px;
  border-radius: 5px;
}
.date-div {
  /* border-style: solid; */
  border-radius: 5px;
  text-align: center;
  height: 12%;
  width: 99%;
  background: #b6d4e1;
  box-shadow: 0 0 3px 3px white;
  border-width: 1px;
  border-radius: 5px;
}
/* ... */

